--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,15 @@
 doctype html
-html
+html(lang='en')
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    if user
+      title #{user.username} - Members Only
+    else
+      title Members Only
+    link(rel='icon' href='/images/favicon.png')
+    link(rel='stylesheet', href='/stylesheets/reset.css')
+    link(rel='stylesheet', href='/stylesheets/index.css')
   body
     block content
+    script(src='/javascript/index.js')
