--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,10 @@
+body {
+  background-color: #000;
+}
 
+main.homepageContent header.navHeader {
+  height: 3rem;
+  background-color: #57bedd;
+}
 
 /*# sourceMappingURL=index.css.map */
