login / signup buttons

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   main.homepageContent
-    header.navHeader
+    header
+      div.signupLoginContainer
+        a.login(href='/login') Login
+        a.signup(href='/signup') Sign Up
