--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,10 +1,32 @@
-body {
-  background-color: #000;
+:root {
+  font-size: 16px;
 }
 
-main.homepageContent header.navHeader {
-  height: 3rem;
-  background-color: #57bedd;
+body {
+  background-color: black;
+}
+
+main.homepageContent header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 4rem;
+  background-color: #35df79;
+}
+main.homepageContent header div.signupLoginContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1rem;
+  width: 18rem;
+}
+main.homepageContent header div.signupLoginContainer a {
+  padding: 0.5rem 1.5rem;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  text-decoration: none;
+  border: 2px solid black;
+  border-radius: 1.5rem;
+  color: black;
 }
 
 /*# sourceMappingURL=index.css.map */
