--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,3 @@
-$black: #000;
 $darkblue: #01b7ee;
 $lightblue: #57bedd;
 $darkgreen: #35df79;
@@ -6,14 +5,37 @@ $lightgreen: #7ace9c;
 $darkyellow: #d4fd02;
 $lightyellow: #eaff82;
 
-body {
-  background-color: $black;
+:root {
+  font-size: 16px;
 }
 
+body {
+  background-color: black;
+}
+
+// [ HOMEPAGE ]
 main.homepageContent {
-  header.navHeader {
-    height: 3rem;
-    background-color: $lightblue;
-    // background-color: $darkblue;
+  header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 4rem;
+    background-color: $darkgreen;
+    div.signupLoginContainer {
+      display: flex;
+      justify-content: space-between;
+      margin-right: 1rem;
+      width: 18rem;
+      a {
+        padding: 0.5rem 1.5rem;
+        font-family: sans-serif;
+        font-size: 1.5rem;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 1.5rem;
+        color: black;
+        // background-color: $darkblue;
+      }
+    }
   }
 }
