--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,27 +6,49 @@ body {
   background-color: black;
 }
 
-main.homepageContent header {
+main.homepage header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   height: 4rem;
   background-color: #35df79;
 }
-main.homepageContent header div.signupLoginContainer {
+main.homepage header div.signupLoginContainer {
   display: flex;
   justify-content: space-between;
   margin-right: 1rem;
-  width: 18rem;
+  width: 20rem;
 }
-main.homepageContent header div.signupLoginContainer a {
+main.homepage header div.signupLoginContainer a {
   padding: 0.5rem 1.5rem;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  text-decoration: none;
+  font-size: 1.75rem;
   border: 2px solid black;
   border-radius: 1.5rem;
   color: black;
+  font-family: sans-serif;
+  text-decoration: none;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+main.homepage header div.signupLoginContainer a:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #1bac55;
+  transition: all 0.3s;
+  border-radius: 1.5rem;
+  z-index: -1;
+}
+main.homepage header div.signupLoginContainer a:hover {
+  background-color: #7ace9c;
+}
+main.homepage header div.signupLoginContainer a:hover:before {
+  width: 100%;
 }
 
 /*# sourceMappingURL=index.css.map */
