--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -14,7 +14,7 @@ body {
 }
 
 // [ HOMEPAGE ]
-main.homepageContent {
+main.homepage {
   header {
     display: flex;
     justify-content: flex-end;
@@ -25,17 +25,41 @@ main.homepageContent {
       display: flex;
       justify-content: space-between;
       margin-right: 1rem;
-      width: 18rem;
+      width: 20rem;
       a {
         padding: 0.5rem 1.5rem;
-        font-family: sans-serif;
-        font-size: 1.5rem;
-        text-decoration: none;
+        font-size: 1.75rem;
         border: 2px solid black;
         border-radius: 1.5rem;
         color: black;
-        // background-color: $darkblue;
+        font-family: sans-serif;
+        text-decoration: none;
+        transition: all 0.3s;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+        &:before {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 0%;
+          height: 100%;
+          background-color: darken($darkgreen, 15%);
+          transition: all 0.3s;
+          border-radius: 1.5rem;
+          z-index: -1;
+        }
+        &:hover {
+          background-color: $lightgreen;
+          &:before {
+            width: 100%;
+          }
+        }
       }
     }
+  }
+  main.homepageContent {
+    //
   }
 }
