--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  main.homepageContent
+  main.homepage
     header
       div.signupLoginContainer
         a.login(href='/login') Login
         a.signup(href='/signup') Sign Up
+    main.homepageContent
