--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -50,5 +50,46 @@ main.homepage header div.signupLoginContainer a:hover {
 main.homepage header div.signupLoginContainer a:hover:before {
   width: 100%;
 }
+main.signupForm {
+  display: flex;
+  justify-content: center;
+}
+main.signupForm div.formContainer form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+  padding: 1rem;
+  width: 19rem;
+  background-color: #d4fd02;
+  border-radius: 0.5rem;
+}
+main.signupForm div.formContainer form h2 {
+  margin: 1rem 0;
+  font-size: 2rem;
+  font-family: sans-serif;
+}
+main.signupForm div.formContainer form div.signupInput {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
+  width: 100%;
+}
+main.signupForm div.formContainer form div.signupInput label {
+  font-family: sans-serif;
+  font-weight: 700;
+}
+main.signupForm div.formContainer form div.signupInput input {
+  height: 1.5rem;
+}
+main.signupForm div.formContainer form button {
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  border: none;
+  background-color: #94b101;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=index.css.map */
