--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -87,7 +87,7 @@ main.signupForm div.formContainer form button {
   padding: 0.5rem 1rem;
   margin: 1rem 0;
   border: none;
-  background-color: #94b101;
+  background-color: #aaca02;
   border-radius: 0.25rem;
   cursor: pointer;
 }
