--- a/views/login.pug
+++ b/views/login.pug
@@ -12,5 +12,6 @@ block content
           label(for='password') Password:
           input(type='text' id='password' name='password' placeholder='password' required)
         button(type='submit') Submit
-
+        if message
+          p.error=message
   script(src='javascript/login.js')
