--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -6,6 +6,7 @@ block content
       div.signupLoginContainer
         a.login(href='/login') Login
         a.signup(href='/signup') Sign Up
-        if currentUser
-          div=currentUser
+    main.homepageContent
+    if currentUser
+      div=currentUser
     main.homepageContent
