created logic for login/logout button

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -4,7 +4,10 @@ block content
   main.homepage
     header
       div.signupLoginContainer
-        a.login(href='/login') Login
+        if currentUser
+          a.logout(href='/logout') Logout
+        else
+          a.login(href='/login') Login
         a.signup(href='/signup') Sign Up
     main.homepageContent
     if currentUser
