--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -4,9 +4,11 @@ block content
   main.homepage
     header
       div.signupLoginContainer
-        a.login(href='/login') Login
+        if currentUser
+          a.logout(href='/logout') Logout
+        else
+          a.login(href='/login') Login
         a.signup(href='/signup') Sign Up
-    main.homepageContent
-    if currentUser
-      div=currentUser
+      if currentUser
+        div=currentUser
     main.homepageContent
