--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -61,7 +61,31 @@ main.homepage {
     }
   }
   main.homepageContent {
-    //
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    form.newMessage {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 19rem;
+      margin-top: 1rem;
+      padding: 2rem;
+      background-color: $lightyellow;
+      border-radius: 0.5rem;
+      h2 {
+        margin-bottom: 1rem;
+      }
+      div.messageInput {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0.25rem 0;
+      }
+      button {
+        margin-top: 1rem;
+      }
+    }
   }
 }
 
